added capybara tests, readme and more

--- a/test/dummy/app/views/jellies/edit.html.erb
+++ b/test/dummy/app/views/jellies/edit.html.erb
@@ -1,10 +1,9 @@
+<h3>Edit Jelly</h3>
+
 <%= render 'shared/error_messages', :target => @jelly %>
 
 <%= form_for @jelly do |f| %>
-  <fieldset>
-    <legend>Edit Jelly</legend>
-    <%= render 'fields', :form => f %>
-  </fieldset>
+  <%= render 'fields', :form => f %>
   <p class="action">
     <%= f.submit 'update' %>
     or <%= link_to "cancel", jellies_path %>
