--- a/test/dummy/app/views/jellies/show.html.erb
+++ b/test/dummy/app/views/jellies/show.html.erb
@@ -1,11 +1,15 @@
+<h3>Show Jelly</h3>
+
 <%= render 'shared/error_messages', :target => @jelly %>
 
-<fieldset>
-  <legend>Show Jelly</legend>
-  <h3><%= @jelly.title %></h3>
-  <p><%= @jelly.name %></p>
-</fieldset>
+<h3><%= @jelly.title %></h3>
+<p><%= @jelly.name %></p>
 
 <br/>
 
-<p><%= link_to "back to jellies", jellies_path %></p>
+<p>
+  <%= link_to content_tag(:em, "update"), edit_jelly_path(@jelly) %> or 
+  <%= link_to content_tag(:em, "delete"), jelly_path(@jelly), :method => :delete, :confirm => "Are you sure?" %>
+  this jelly, or 
+  <%= link_to "return to jellies", jellies_path %>
+</p>
